--- a/src/css/common/reset.css
+++ b/src/css/common/reset.css
@@ -38,7 +38,7 @@ button {
     width: 4rem;
     height: 50px;
     /*margin-right: 10px;*/
-    background: url(../images/ystx_logo.png) no-repeat left center;
+    background: url(../../images/index/ystx_logo.png) no-repeat left center;
     background-size: 3.5rem 3.5rem;
     /*background-color: pink;*/
     /*-webkit-background-size: 125px 24px;*/
